@@ -1016,6 +1016,9 @@ request_types = {
                     max_payload=1024*1024*1024),
     'sign-git-tag': RT((SF('key'),),
                       max_payload=1024*1024*1024),
+    'sign-container': RT((SF('key'),
+                          SF('docker-reference')),
+                         max_payload=1024*1024*1024),
     'sign-ostree': RT((SF('key'),
                        SF('ostree-hash')),
                       max_payload=1024*1024*1024),
