@@ -1,0 +1,197 @@
+# Copyright (C) 2016 Red Hat, Inc.  All rights reserved.
+#
+# This copyrighted material is made available to anyone wishing to use, modify,
+# copy, or redistribute it subject to the terms and conditions of the GNU
+# General Public License v.2.  This program is distributed in the hope that it
+# will be useful, but WITHOUT ANY WARRANTY expressed or implied, including the
+# implied warranties of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+# See the GNU General Public License for more details.  You should have
+# received a copy of the GNU General Public License along with this program; if
+# not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth
+# Floor, Boston, MA 02110-1301, USA.  Any Red Hat trademarks that are
+# incorporated in the source code or documentation are not subject to the GNU
+# General Public License and may only be used or replicated with the express
+# permission of Red Hat, Inc.
+#
+# Red Hat Author: Patrick Uiterwijk <puiterwijk@redhat.com>
+
+AT_SETUP([Container check])
+
+mkdir ca client bridge server gnupg rpm
+chmod 700 gnupg
+
+AT_DATA([nss_password_file], [[nss-pw
+]])
+AT_DATA([pkcs12_password_file], [[pk12-pw
+]])
+
+# Set up a CA and create all certificates
+AT_CHECK([certutil -d ca -N -f nss_password_file])
+# Specify serial number (-m) explicitly because it is time-based by default,
+# and creating certificates quickly can result in a collision.
+AT_CHECK([certutil -d ca -S -f nss_password_file -z /dev/null -n my-ca \
+		-s 'CN=My CA' -t CT,, -x -v 120 -m 1], , , [ignore])
+AT_CHECK([certutil -d ca -L -n my-ca -a > ca.pem])
+AT_CHECK([certutil -d ca -S -f nss_password_file -z /dev/null \
+		-n sigul-bridge-cert -s 'CN=localhost,OU=bridge' -c my-ca \
+		-t u,, -v 120 -m 2], , , [ignore])
+AT_CHECK([pk12util -d ca -o bridge.p12 -n sigul-bridge-cert \
+		-k nss_password_file -w pkcs12_password_file], , [ignore])
+AT_CHECK([certutil -d ca -S -f nss_password_file -z /dev/null \
+		-n sigul-server-cert -s 'CN=localhost,OU=server' -c my-ca \
+		-t u,, -v 120 -m 3], , , [ignore])
+AT_CHECK([pk12util -d ca -o server.p12 -n sigul-server-cert \
+		-k nss_password_file -w pkcs12_password_file], , [ignore])
+AT_CHECK([certutil -d ca -S -f nss_password_file -z /dev/null \
+		-n sigul-client-cert -s 'CN=root' -c my-ca -t u,, -v 120 -m 4],
+	 , , [ignore])
+AT_CHECK([pk12util -d ca -o client.p12 -n sigul-client-cert \
+		-k nss_password_file -w pkcs12_password_file], , [ignore])
+
+
+# Set up and start bridge:
+AT_CHECK([certutil -d bridge -N -f nss_password_file])
+AT_CHECK([certutil -d bridge -A -n my-ca -t CT,, -a -i ca.pem])
+AT_CHECK([pk12util -d bridge -i bridge.p12 -k nss_password_file \
+		-w pkcs12_password_file], , [ignore])
+rm bridge.p12
+
+[cat > bridge/bridge.conf <<EOF
+[bridge]
+required-fas-group:
+[daemon]
+unix-user:
+unix-group:
+[nss]
+nss-dir: $(pwd)/bridge
+nss-password: nss-pw
+EOF]
+
+AT_CHECK([sigul_bridge -c bridge/bridge.conf -d -v -v \
+		--internal-log-dir="$(pwd)/bridge" \
+		--internal-pid-dir="$(pwd)/bridge"])
+
+
+# Set up and start server:
+AT_CHECK([certutil -d server -N -f nss_password_file])
+AT_CHECK([certutil -d server -A -n my-ca -t CT,, -a -i ca.pem])
+AT_CHECK([pk12util -d server -i server.p12 -k nss_password_file \
+		-w pkcs12_password_file], , [ignore])
+rm server.p12
+
+mkdir server/gnupg/
+[cat > server/server.conf <<EOF
+[server]
+bridge-hostname: localhost
+# This check is lenient here since we try different usernames
+lenient-username-check: yes
+[database]
+database-path: $(pwd)/server/server.sqlite
+[gnupg]
+gnupg-home: $(pwd)/server/gnupg
+gnupg-key-type: RSA
+gnupg-key-usage: sign
+[daemon]
+unix-user:
+unix-group:
+[nss]
+nss-dir: $(pwd)/server
+nss-password: nss-pw
+[binding]
+enabled: test
+EOF]
+
+AT_CHECK([sigul_server_create_db -c server/server.conf -v -v])
+AT_CHECK([printf 'rootroot\0' | \
+		sigul_server_add_admin -c server/server.conf --batch -v -v \
+		-n root])
+
+AT_CHECK([sigul_server -c server/server.conf -d -v -v \
+		--internal-log-dir="$(pwd)/server" \
+		--internal-pid-dir="$(pwd)/server"])
+
+
+# Set up client
+AT_CHECK([certutil -d client -N -f nss_password_file])
+AT_CHECK([certutil -d client -A -n my-ca -t CT,, -a -i ca.pem])
+AT_CHECK([pk12util -d client -i client.p12 -k nss_password_file \
+		-w pkcs12_password_file], , [ignore])
+rm client.p12
+
+[cat > client/client.conf <<EOF
+[client]
+bridge-hostname: localhost
+server-hostname: localhost
+user-name: root
+[nss]
+nss-dir: $(pwd)/client
+nss-password: nss-pw
+[binding]
+enabled: test
+EOF]
+
+# Import test key
+AT_CHECK([printf 'rootroot\0imported\0imported-key-pw\0' | \
+ 		sigul -c client/client.conf --batch -v -v \
+		import-key imported-key \
+		"$abs_srcdir/tests/imported-secret-key.asc"])
+AT_CHECK([printf 'rootroot\0' | \
+		sigul -c client/client.conf --batch -v -v \
+		list-keys], ,
+[imported-key
+])
+AT_CHECK([printf 'imported-key-pw\0' | \
+		sigul -c client/client.conf --batch -v -v \
+		get-public-key imported-key > public.asc])
+AT_CHECK([gpg -q --homedir gnupg --import public.asc])
+rm public.asc
+
+
+# sign-container
+[cat > manifest.json <<EOF
+{
+    "schemaVersion": 2,
+    "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
+    "config": {
+        "mediaType": "application/vnd.docker.container.image.v1+json",
+        "size": 7023,
+        "digest": "sha256:b5b2b2c507a0944348e0303114d8d93aaaa081732b86451d9bce1f432a537bc7"
+    },
+    "layers": [
+        {
+            "mediaType": "application/vnd.docker.image.rootfs.diff.tar.gzip",
+            "size": 32654,
+            "digest": "sha256:e692418e4cbaf90ca69d05a66403747baa33ee08806650b51fab815ad7fc331f"
+        },
+        {
+            "mediaType": "application/vnd.docker.image.rootfs.diff.tar.gzip",
+            "size": 16724,
+            "digest": "sha256:3c3a4604a545cdc127456d94e421cd355bca5b528f4a9c1905b15da2eb4a4c6b"
+        },
+        {
+            "mediaType": "application/vnd.docker.image.rootfs.diff.tar.gzip",
+            "size": 73109,
+            "digest": "sha256:ec4b8955958665577945c89419d1af06b5f7636b4ac3da7f12184802ad867736"
+        }
+    ],
+}
+EOF]
+# hash: 0e4e6e9922795fbbf9c3a1be37d468c6d744a8bdabd42dd7686d471a83fe9339
+
+
+
+# sign-container
+AT_CHECK([printf 'imported-key-pw\0' | \
+		sigul -c client/client.conf --batch -v -v \
+		sign-container -o signature.asc imported-key manifest.json testimage])
+
+AT_CHECK([GNUPGHOME=gnupg skopeo standalone-verify manifest.json testimage \
+          "E521C6FD707E651BD295D6BA54B69BA6868C1849" signature.asc], ,
+         [Signature verified, digest sha256:0e4e6e9922795fbbf9c3a1be37d468c6d744a8bdabd42dd7686d471a83fe9339
+])
+
+# Terminate daemons
+AT_CHECK([kill "$(cat server/sigul_server.pid)"])
+AT_CHECK([kill -QUIT "$(cat bridge/sigul_bridge.pid)"])
+
+AT_CLEANUP
