@@ -2,6 +2,9 @@
 
 	* src/server.py: Added gpg_signature for plain gpg signatures.
 
+	* Server/Bridge/Client: Implemented Container signing, using skopeo
+	scheme.
+
 2016-10-01  Patrick Uiterwijk  <puiterwijk@redhat.com>
 
 	* src/utils.py (nss_init): Check whether NSS password is correct on
